<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/memory_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/memory_title_hint"/>

    <TextView
        android:text="@string/location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/memory_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/memory_location_hint"/>

    <Button
        android:id="@+id/memory_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_notes_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/memory_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description "/>

</LinearLayout>